--- a/homeworks/hw-week-7.tex
+++ b/homeworks/hw-week-7.tex
@@ -1,66 +1,9 @@
-% !TEX options=--shell-escape
-\documentclass{article}
-\usepackage{tikz,amsthm,amsmath,cancel,pgfplots,animate,multirow,unicode-math,adjustbox,booktabs,array,pst-solides3d,pst-all,pst-3dplot,color,colortbl,sets,mathtools}
-\usepackage[margin=96pt]{geometry}
+\subsection{Домашнее задание 7}
 
-\usetikzlibrary{automata,positioning,calc,decorations.pathmorphing,patterns,external}
-\tikzexternalize[prefix=external/]
 
-\newtheorem{problem}{Задача}
-\newtheorem{lemma}{Лемма}
-\newtheorem{theorem}{Теорема}
-\newtheorem{definition}{Определение}
-\newtheorem{example}{Пример}
-\renewcommand*{\proofname}{Доказательство}
-\newcommand{\const}{\mathrm{const}}
-\DeclareMathOperator{\ord}{ord}
-\DeclareMathOperator{\maj}{MAJ}
-\newcommand{\abs}[1]{\left\lvert#1\right\rvert}
-\newcommand{\floor}[1]{\left\lfloor#1\right\rfloor}
-\newcommand{\ceil}[1]{\left\lceil#1\right\rceil}
-\newcommand{\fr}[1]{\left\{#1\right\}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\Q}{\mathbb{Q}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\continuum}{\mathfrak{c}}
-\DeclarePairedDelimiterX\set[1]\lbrace\rbrace{\def\given{\;\delimsize\vert\;}#1}
-
-\newcolumntype{o}{>{\columncolor{orange}}c}
-
-\makeatletter
-\newenvironment{sqcases}{%
-	\matrix@check\sqcases\env@sqcases
-}{%
-	\endarray\right.%
-}
-\def\env@sqcases{%
-	\let\@ifnextchar\new@ifnextchar
-	\left\lbrack
-	\def\arraystretch{1.2}%
-	\array{@{}l@{\quad}l@{}}%
-}
-\makeatother
-
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{5pt}
-\setmainfont{CMU Serif}
-\widowpenalties 1 10000
-\raggedbottom
-
-\date{29 октября, 2022}
-\title{Дискретная математика \\ \Large Домашнее задание 7}
-\author{Иван Мачуговский}
-
-\AtBeginDocument{
-	\renewcommand{\setminus}{\mathbin{\backslash}}
-}
-
-\begin{document}
-	\maketitle
-
-	\begin{section}{Задача 1}
+	\begin{center}
+    \textbf{Задача 1}
+\end{center}
 		Нет, несчетно. В самом деле, обозначим это множество $A$ и построим инъекцию $f: \{0, 1\}^{\N} \to A$:
 
 		\begin{equation*}
@@ -70,12 +13,14 @@
 		где $\overline{x} = 1 - x$ -- операция отрицания. Тогда каждый отрезок нечетной длины содержит некоторое количество $n$ "блоков" из двух бит вида $x \overline{x}$ и еще некоторый дополнительный бит $y$ из конца предыдущего блока или начала следующего. Итого нулевых и единичных бит соответственно $n + \overline{y}$ и $n - y$, что отличается ровно на единицу.
 
 		Итого $\abs{\{0, 1\}^{\N}} \le \abs{A}$, а $\{0, 1\}^{\N}$ несчетно, поэтому и $A$ несчетно.
-	\end{section}
 
-	\begin{section}{Задача 2}
+
+	\begin{center}
+    \textbf{Задача 2}
+\end{center}
 		Обозначим множество таких последовательностей $A$.
 
-		С одной стороны, очевидно, $\abs{A} \le \abs{3^{\N}} = \continuum$.
+		С одной стороны, очевидно, $\abs{A} \le \abs{3^{\N}} = \mathfrak{c}$.
 
 		С другой стороны, легко построить инъекцию $f: \{0, 1\}^{\N} \to A$. Будем строить последовательность $b = f(a_1 a_2 \dots a_n \dots)$ итеративно. Пусть $b_1 = a_1$. Далее для каждого $n \ge 2$:
 
@@ -97,18 +42,22 @@
 			b_{n-1} = b'_{n-1}, \ a_n \ne a'_n \implies b_n \ne b'_n.
 		\end{equation*}
 
-		Тогда $\abs{A} \ge \abs{\{0, 1\}^{\N}} = \continuum$.
+		Тогда $\abs{A} \ge \abs{\{0, 1\}^{\N}} = \mathfrak{c}$.
 
-		Отсюда по теореме Кантора-Бернштейна $\abs{A} = \continuum$.
-	\end{section}
+		Отсюда по теореме Кантора-Бернштейна $\abs{A} = \mathfrak{c}$.
 
-	\begin{section}{Задача 3}
+
+	\begin{center}
+    \textbf{Задача 3}
+\end{center}
 		Да, можно.
 
-		Введем на плоскости декартову систему координат. Для каждой точки $A$ прямой $x = y$ расположим единицу так, что ее вершина (общий конец отрезков) находится в точке $A$, а длинный отрезок расположен вертикально. Легко видеть, что при таком расположении единицы не пересекаются, а всего их будет $\abs{\R} = \continuum$.
-	\end{section}
+		Введем на плоскости декартову систему координат. Для каждой точки $A$ прямой $x = y$ расположим единицу так, что ее вершина (общий конец отрезков) находится в точке $A$, а длинный отрезок расположен вертикально. Легко видеть, что при таком расположении единицы не пересекаются, а всего их будет $\abs{\R} = \mathfrak{c}$.
 
-	\begin{section}{Задача 4}
+
+	\begin{center}
+    \textbf{Задача 4}
+\end{center}
 		Нет, нельзя.
 
 		Рассмотрим произвольное удовлетворяющее условию расположение крестов на плоскости.
@@ -117,7 +66,7 @@
 
 		Для данного креста назовем его вершины $A, B, C, D$ в порядке обхода против часовой стрелки. Тогда $O = AC \cap BD$ -- центр креста. Выберем произвольно по рациональной точке из внутренностей $\triangle AOB, \triangle BOC, \triangle COD$ и $\triangle DOA$ (то есть точки на границе брать запрещается). Сопоставим кресту множество из этих четырех точек.
 
-		Если ни у каких двух крестов все четыре точки одновременно не совпадают, то всего крестов должно быть не более, чем четверок рациональных точек, то есть $(\abs{\Q}^2)^4 = \aleph_0 < \continuum$, что и требуется.
+		Если ни у каких двух крестов все четыре точки одновременно не совпадают, то всего крестов должно быть не более, чем четверок рациональных точек, то есть $(\abs{\Q}^2)^4 = \aleph_0 < \mathfrak{c}$, что и требуется.
 
 		Покажем, что совпадения действительно исключены.
 
@@ -164,9 +113,11 @@
 		\end{equation*}
 
 		Следовательно, вершины отрезка $O_2 P$ (подмножество второго креста) расположены по разные стороны от оси ординат (или, в случае $O_2$, возможно, на осях), а их ординаты лежат в интервале $(-1, 1)$, следовательно, этот отрезок пересекает $B_1 D_1$, поэтому кресты пересекаются. Противоречие.
-	\end{section}
 
-	\begin{section}{Задача 5}
+
+	\begin{center}
+    \textbf{Задача 5}
+\end{center}
 		Нет, неверно.
 
 		Любую нестрого убывающую последовательность натуральных чисел $a_1, a_2, \dots, a_n, \dots$ можно переписать в виде
@@ -184,15 +135,17 @@
 		причем $b_n \in \N_0$. Каждый ненулевой член последовательности $\{b_n\}$, начиная с $n \ge 2$, соответствует уменьшению элементов последовательности $\{a_n\}$, поэтому таких членов конечно (формально -- не более $a_1$).
 
 		Показать, что последовательностей целых чисел с конечным числом ненулевых элементов счетно, можно кучей разных способов; пожалуй, самый короткий -- воспользоваться тем, что в силу основной теоремы арифметики такая последовательность $b_1, b_2, \dots$ однозначно кодируется рациональным (а в нашем частном случае вообще целым) числом $\prod_n p_n^{b_n}$, где $\{p_n\}$ -- последовательность простых чисел, а таких кодов счетно.
-	\end{section}
 
-	\begin{section}{Задача 6}
+
+	\begin{center}
+    \textbf{Задача 6}
+\end{center}
 		Поскольку $\Q$ и $\N$ равномощны, можно исследовать мощность множества биекций не из $\N$ в $\Q$, а из $\N$ в $\N$.
 
 		Обозначим множество биекций $f: \N \to \N$ за $A$. С одной стороны,
 
 		\begin{equation*}
-			\abs{A} \le \abs{\N^{\N}} \le \abs{(2^{\N})^{\N}} = \abs{2^{\N \times \N}} = \abs{2^{\N}} = \continuum.
+			\abs{A} \le \abs{\N^{\N}} \le \abs{(2^{\N})^{\N}} = \abs{2^{\N \times \N}} = \abs{2^{\N}} = \mathfrak{c}.
 		\end{equation*}
 
 		С другой стороны, легко построить инъекцию $g: \{0, 1\}^{\N} \to A$, интерпретируя $A$ как подмножество множества последовательностей натуральных чисел:
@@ -203,10 +156,12 @@
 
 		Здесь если $a_n = 0$, то соответствующие члены последовательности будут равны $2n-1$ и $2n$, как в натуральном ряде, а если $a_n = 1$, то они будут равны $2n$ и $2n-1$, то есть de facto поменяны местами.
 
-		Отсюда $\abs{A} \ge \abs{\{0, 1\}^{\N}} = \continuum$. Итого по теореме Кантора-Бернштейна $\abs{A} = \continuum$.
-	\end{section}
+		Отсюда $\abs{A} \ge \abs{\{0, 1\}^{\N}} = \mathfrak{c}$. Итого по теореме Кантора-Бернштейна $\abs{A} = \mathfrak{c}$.
 
-	\begin{section}{Задача 7}
+
+	\begin{center}
+    \textbf{Задача 7}
+\end{center}
 		Да, верно.
 
 		\begin{lemma}
@@ -224,26 +179,26 @@
 
 			Легко видеть, что $\emptyset \in \mathfrak{P}$.
 
-			Отношение $\preceq$ введем стандартно: $P \preceq Q \iff P \subseteq Q$.
+			Отношение $\preceq$ введем стандартно: $P \preceq Q \Longleftrightarrow P \subseteq Q$.
 
-			Тогда любая цепь $\{P_\alpha\}_{\alpha \in \Alpha}$ имеет верхнюю грань
+			Тогда любая цепь $\{P_\alpha\}_{\alpha \in A}$ имеет верхнюю грань
 
 			\begin{equation*}
-				P = \bigcup_{\alpha \in \Alpha} P_\alpha,
+				P = \bigcup_{\alpha \in A} P_\alpha,
 			\end{equation*}
 
 			лежащую в $\mathfrak{P}$, поскольку
 
 			\begin{equation*}
-				\bigcup_{\lambda \in \Lambda} p_\lambda = \bigcup_{\alpha \in \Alpha} \bigcup_{\lambda \in \Lambda_\alpha} p_{\alpha \lambda} \subseteq K,
+				\bigcup_{\lambda \in \Lambda} p_\lambda = \bigcup_{\alpha \in A} \bigcup_{\lambda \in \Lambda_\alpha} p_{\alpha \lambda} \subseteq K,
 			\end{equation*}
 
-			а элементы $P$ не пересекаются, ведь если $p_\kappa \cap p_\mu \ne \emptyset$, то $p_\kappa \in P_\alpha$ и $p_\mu = P_\beta$ для некоторых $\alpha, \beta \in \Alpha$. Так как $\set{P_\alpha}$ -- цепь, то либо $P_\alpha \preceq P_\beta$, либо $P_\alpha \preceq P_\beta$; в обоих случаях получаем, что $p_\kappa, p_\mu \in P_\beta$ либо $P_\alpha$ соответственно, и при этом $p_\kappa \cap p_\mu \ne 0$, откуда $p_\kappa = p_\mu$.
+			а элементы $P$ не пересекаются, ведь если $p_\kappa \cap p_\mu \ne \emptyset$, то $p_\kappa \in P_\alpha$ и $p_\mu = P_\beta$ для некоторых $\alpha, \beta \in A$. Так как $\set{P_\alpha}$ -- цепь, то либо $P_\alpha \preceq P_\beta$, либо $P_\alpha \preceq P_\beta$; в обоих случаях получаем, что $p_\kappa, p_\mu \in P_\beta$ либо $P_\alpha$ соответственно, и при этом $p_\kappa \cap p_\mu \ne 0$, откуда $p_\kappa = p_\mu$.
 
 			Следовательно, условия леммы Цорна выполняются, и существует максимальное семейство $P$. Обозначим
 
 			\begin{equation*}
-				L = K \setminus \bigsqcup_{\alpha \in \Alpha} p_\alpha.
+				L = K \setminus \bigsqcup_{\alpha \in A} p_\alpha.
 			\end{equation*}
 
 			Если $L = \emptyset$, получено требуемое. Если $L$ конечно, выберем в $P$ любое счетное множество и прибавим к нему $L$; оно останется счетным, и теперь $L = \emptyset$.
@@ -272,24 +227,26 @@
 			Отсюда $\abs{K} = \abs{K \times \{1, 2\}}$.
 		\end{proof}
 
-		Пусть $\abs{A \cup B} = \continuum$. В ZFC любые два множества сравнимы, тогда без ограничения общности $\abs{A} \le \abs{B}$. Тогда
+		Пусть $\abs{A \cup B} = \mathfrak{c}$. В ZFC любые два множества сравнимы, тогда без ограничения общности $\abs{A} \le \abs{B}$. Тогда
 
 		\begin{equation*}
-			\abs{B} \le \abs{A \cup B} = \continuum.
+			\abs{B} \le \abs{A \cup B} = \mathfrak{c}.
 		\end{equation*}
 
-		$B$ бесконечно, потому что в противном случае и $A$, а значит, и $\continuum$ были бы конечны.
+		$B$ бесконечно, потому что в противном случае и $A$, а значит, и $\mathfrak{c}$ были бы конечны.
 
 		Тогда по лемме
 
 		\begin{equation*}
-			\abs{B} = \abs{B \times \{1, 2\}} \ge \abs{(A \times \{1\}) \sqcup (B \times \{2\})} \ge \abs{A \cup B} = \continuum,
+			\abs{B} = \abs{B \times \{1, 2\}} \ge \abs{(A \times \{1\}) \sqcup (B \times \{2\})} \ge \abs{A \cup B} = \mathfrak{c},
 		\end{equation*}
 
-		откуда по теореме Кантора-Бернштейна $\abs{B} = \continuum$, что доказывает требуемое.
-	\end{section}
+		откуда по теореме Кантора-Бернштейна $\abs{B} = \mathfrak{c}$, что доказывает требуемое.
 
-	\begin{section}{Задача 8}
+
+	\begin{center}
+    \textbf{Задача 8}
+\end{center}
 		Да, существует.
 
 		Занумеруем рациональные числа $\{q_n\}$.
@@ -297,5 +254,5 @@
 		Для каждого действительного числа $a$ выберем по рациональной точке в его проколотой $1, \frac{1}{2}, \dots, \frac{1}{n}, \dots$-окрестности: $\{q_1(a), q_2(a), \dots\}$. Это множество счетно, поскольку в противном случае в некоторой окрестности $a$ не лежало бы ни одной рациональной точки, и имеет единственную предельную точку -- $a$. Тогда $Q(a) = \set{q^{-1}(q_n(a)) \mid n \in \N}$ -- множество натуральных чисел.
 
 		Рассмотрим семейство из таких множеств -- по одному на каждое $a$. Оно будет, очевидно, континуально. Любые два множества $Q(a), Q(b)$ из этого семейства не пересекаются начиная с $n \ge \ceil{\frac{2}{\abs{a-b}}}$, поскольку при этом условии $\frac{1}{n}$-окрестности $a$ и $b$ не пересекаются, поэтому $Q(a) \cap Q(b)$ конечно.
-	\end{section}
-\end{document}
+
+
