--- a/homeworks/hw-week-1.tex
+++ b/homeworks/hw-week-1.tex
@@ -1,223 +1,202 @@
-% !TEX options=--shell-escape
-\documentclass{article}
-\usepackage{tikz,amsthm,amsmath,cancel,pgfplots,animate,multirow,unicode-math,adjustbox,booktabs,array,pst-solides3d,pst-all,pst-3dplot}
-\usepackage[margin=96pt]{geometry}
+\subsection{Домашнее задание 1}
 
-\usetikzlibrary{automata,positioning,calc,decorations.pathmorphing,patterns,external}
-\tikzexternalize[prefix=external/]
+\begin{center}
+\textbf{Задача 1}
+\end{center}
+    Заметим, что если $a, b \ge 0, a + b \le 1/2$, выполняется
 
-\newtheorem{problem}{Задача}
-\newtheorem{theorem}{Теорема}
-\newtheorem{definition}{Определение}
-\newtheorem{example}{Пример}
-\renewcommand*{\proofname}{Доказательство}
-\newcommand{\const}{\mathrm{const}}
-\newcommand{\abs}[1]{\lvert#1\rvert}
+    \begin{equation*}
+        \frac{1 - a}{1 + a} \cdot \frac{1 - b}{1 + b} = \frac{1 - (a + b) + ab}{1 + (a + b) + ab} = 1 - \frac{2(a + b)}{1 + (a + b) + ab} \ge 1 - \frac{2(a + b)}{1 + (a + b)} = \frac{1 - (a + b)}{1 + (a + b)}.
+    \end{equation*}
 
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{5pt}
-\setmainfont{CMU Serif}
-\widowpenalties 1 10000
-\raggedbottom
+    Докажем теперь по индукции по $n$, что при $x_1 + x_2 + \dots + x_n = 1/2$ выполняется
 
-\date{8 сентября, 2022}
-\title{Дискретная математика \\ \Large Домашнее задание 1}
-\author{Иван Мачуговский}
+    \begin{equation*}
+        \frac{1 - x_1}{1 + x_1} \cdot \frac{1 - x_2}{1 + x_2} \cdot \dots \cdot \frac{1 - x_n}{1 + x_n} \ge \frac{1}{3}.
+    \end{equation*}
 
-\begin{document}
-	\maketitle
+    База $n = 1$ очевидна:
 
-	\begin{section}{Задача 1}
-		Заметим, что если $a, b \ge 0, a + b \le 1/2$, выполняется
+    \begin{equation*}
+        \frac{1 - 1/2}{1 + 1/2} = \frac{1}{3}.
+    \end{equation*}
 
-		\begin{equation*}
-			\frac{1 - a}{1 + a} \cdot \frac{1 - b}{1 + b} = \frac{1 - (a + b) + ab}{1 + (a + b) + ab} = 1 - \frac{2(a + b)}{1 + (a + b) + ab} \ge 1 - \frac{2(a + b)}{1 + (a + b)} = \frac{1 - (a + b)}{1 + (a + b)}.
-		\end{equation*}
+    Предположим, утверждение верно для $n$, докажем его для $n + 1$. Тогда применим требуемое утверждение для $x_1, x_2, \dots, x_{n-1}, x_n + x_{n+1}$:
 
-		Докажем теперь по индукции по $n$, что при $x_1 + x_2 + \dots + x_n = 1/2$ выполняется
+    \begin{multline*}
+        \frac{1 - x_1}{1 + x_1} \cdot \frac{1 - x_2}{1 + x_2} \cdot \dots \cdot \frac{1 - x_n}{1 + x_n} \cdot \frac{1 - x_{n+1}}{1 + x_{n+1}} \ge \frac{1 - x_1}{1 + x_1} \cdot \frac{1 - x_2}{1 + x_2} \cdot \dots \cdot \frac{1 - x_{n-1}}{1 + x_{n-1}} \cdot \frac{1 - (x_n + x_{n+1})}{1 + (x_n + x_{n+1})} \ge \\
+        \text{ [по предположению индукции] } \ge \frac{1}{3}. \qed
+    \end{multline*}
 
-		\begin{equation*}
-			\frac{1 - x_1}{1 + x_1} \cdot \frac{1 - x_2}{1 + x_2} \cdot \dots \cdot \frac{1 - x_n}{1 + x_n} \ge \frac{1}{3}.
-		\end{equation*}
+    (все знаки корректны, поскольку дроби положительны)
 
-		База $n = 1$ очевидна:
 
-		\begin{equation*}
-			\frac{1 - 1/2}{1 + 1/2} = \frac{1}{3}.
-		\end{equation*}
+\begin{center}
+\textbf{Задача 2}
+\end{center}    Покажем, что при $n \ge 2, 1 \le k \le n$
 
-		Предположим, утверждение верно для $n$, докажем его для $n + 1$. Тогда применим требуемое утверждение для $x_1, x_2, \dots, x_{n-1}, x_n + x_{n+1}$:
+    \begin{equation*}
+        k \sqrt{(k+1) \sqrt{(k+2) \sqrt{\dots \sqrt{(n-1) \sqrt{n}}}}} < k(k+2)
+    \end{equation*}
 
-		\begin{multline*}
-			\frac{1 - x_1}{1 + x_1} \cdot \frac{1 - x_2}{1 + x_2} \cdot \dots \cdot \frac{1 - x_n}{1 + x_n} \cdot \frac{1 - x_{n+1}}{1 + x_{n+1}} \ge \frac{1 - x_1}{1 + x_1} \cdot \frac{1 - x_2}{1 + x_2} \cdot \dots \cdot \frac{1 - x_{n-1}}{1 + x_{n-1}} \cdot \frac{1 - (x_n + x_{n+1})}{1 + (x_n + x_{n+1})} \ge \\
-			\text{ [по предположению индукции] } \ge \frac{1}{3}. \qed
-		\end{multline*}
+    по (обратной) индукции по $k$.
 
-		(все знаки корректны, поскольку дроби положительны)
-	\end{section}
+    База индукции: при $k = n$ имеем $n < n(n+1)$, что верно.
 
-	\begin{section}{Задача 2}
-		Покажем, что при $n \ge 2, 1 \le k \le n$
+    Предположим, что утверждение верно при некотором $k+1$, докажем его для $k$:
 
-		\begin{equation*}
-			k \sqrt{(k+1) \sqrt{(k+2) \sqrt{\dots \sqrt{(n-1) \sqrt{n}}}}} < k(k+2)
-		\end{equation*}
+    \begin{multline*}
+        k \sqrt{(k+1) \sqrt{(k+2) \sqrt{\dots \sqrt{(n-1) \sqrt{n}}}}} < k \sqrt{(k+1)(k+3)} < \\
+        \text{ [по неравенству о средних] } < k \frac{(k+1) + (k+3)}{2} = k(k+2), \qed.
+    \end{multline*}
 
-		по (обратной) индукции по $k$.
+    Тогда требуемое утверждение получается при подстановке $k = 1$.
 
-		База индукции: при $k = n$ имеем $n < n(n+1)$, что верно.
 
-		Предположим, что утверждение верно при некотором $k+1$, докажем его для $k$:
+\begin{center}
+\textbf{Задача 3}
+\end{center}    Обозначим за $C_n$ множество координат отмеченных точек для отрезка длины $3^n$. Формально:
 
-		\begin{multline*}
-			k \sqrt{(k+1) \sqrt{(k+2) \sqrt{\dots \sqrt{(n-1) \sqrt{n}}}}} < k \sqrt{(k+1)(k+3)} < \\
-			\text{ [по неравенству о средних] } < k \frac{(k+1) + (k+3)}{2} = k(k+2), \qed.
-		\end{multline*}
+    \begin{align*}
+        C_0 &= \{0, 1\},\\
+        C_n &= \{m \mid 0 \le m \le 3^n, m \in C_{n-1} \lor m - 2 \cdot 3^{n-1} \in C_{n-1} \}.
+    \end{align*}
 
-		Тогда требуемое утверждение получается при подстановке $k = 1$.
-	\end{section}
+    Отметим, что множество $C_n$ симметрично, то есть $m \in C_n \Longleftrightarrow 3^n - m \in C_n$. Это тривиально проверяется индукцией, доказательство в этом решении опущено.
 
-	\begin{section}{Задача 3}
-		Обозначим за $C_n$ множество координат отмеченных точек для отрезка длины $3^n$. Формально:
+    Будем по индукции по $n$ доказывать, что для любого $0 \le k \le 3^n$ найдутся два целых числа $0 \le a_n(k) \le b_n(k) \le 3^n$, такие, что $b_n(k) - a_n(k) = k$ и $a_n(k), b_n(k) \in C_n$.
 
-		\begin{align*}
-			C_0 &= \{0, 1\},\\
-			C_n &= \{m \mid 0 \le m \le 3^n, m \in C_{n-1} \lor m - 2 \cdot 3^{n-1} \in C_{n-1} \}.
-		\end{align*}
+    База: $n = 0$, тогда отрезок имеет длину $1$ и оба его конца отмечены, условие задачи выполняется.
 
-		Отметим, что множество $C_n$ симметрично, то есть $m \in C_n \iff 3^n - m \in C_n$. Это тривиально проверяется индукцией, доказательство в этом решении опущено.
+    Индукционный переход: пусть для $n$ утверждение выполняется, докажем его для $n + 1$.
 
-		Будем по индукции по $n$ доказывать, что для любого $0 \le k \le 3^n$ найдутся два целых числа $0 \le a_n(k) \le b_n(k) \le 3^n$, такие, что $b_n(k) - a_n(k) = k$ и $a_n(k), b_n(k) \in C_n$.
+    \begin{enumerate}
+        \item Если $0 \le k \le 3^n$, пусть $a_{n+1}(k) = a_n(k), b_{n+1}(k) = b_n(k)$.
 
-		База: $n = 0$, тогда отрезок имеет длину $1$ и оба его конца отмечены, условие задачи выполняется.
+        \item Если $3^n < k \le 2 \cdot 3^n$, пусть $a_{n+1}(k) = 3^n - a_n(2 \cdot 3^n - k), b_{n+1}(k) = 3^{n+1} - b_n(2 \cdot 3^n - k)$.
 
-		Индукционный переход: пусть для $n$ утверждение выполняется, докажем его для $n + 1$.
+        \item Если $2 \cdot 3^n \le k \le \cdot 3^{n+1}$, пусть $a_{n+1}(k) = a_n(k - 2 \cdot 3^n), b_{n+1}(k) = 2 \cdot 3^n + b_n(k - 2 \cdot 3^n)$.
+    \end{enumerate}
 
-		\begin{enumerate}
-			\item Если $0 \le k \le 3^n$, пусть $a_{n+1}(k) = a_n(k), b_{n+1}(k) = b_n(k)$.
+    Легко проверить, что аргументы функций в нужных границах. Расстояния правильны:
 
-			\item Если $3^n < k \le 2 \cdot 3^n$, пусть $a_{n+1}(k) = 3^n - a_n(2 \cdot 3^n - k), b_{n+1}(k) = 3^{n+1} - b_n(2 \cdot 3^n - k)$.
+    \begin{enumerate}
+        \item $b_{n+1}(k) - a_{n+1}(k) = b_n(k) - a_n(k) = k$.
 
-			\item Если $2 \cdot 3^n \le k \le \cdot 3^{n+1}$, пусть $a_{n+1}(k) = a_n(k - 2 \cdot 3^n), b_{n+1}(k) = 2 \cdot 3^n + b_n(k - 2 \cdot 3^n)$.
-		\end{enumerate}
+        \item $b_{n+1}(k) - a_{n+1}(k) = \cdot 3^{n+1} - b_n(2 \cdot 3^n - k) - 3^n + a_n(2 \cdot 3^n - k) = 2 \cdot 3^n - (b_n(2 \cdot 3^n - k) - a_n(2 \cdot 3^n - k)) = 2 \cdot 3^n - (2 \cdot 3^n - k) = k$.
 
-		Легко проверить, что аргументы функций в нужных границах. Расстояния правильны:
+        \item $b_{n+1}(k) - a_{n+1}(k) = 2 \cdot 3^n + b_n(k - 2 \cdot 3^n) - a_n(k - 2 \cdot 3^n) = 2 \cdot 3^n + (k - 2 \cdot 3^n) = k$.
+    \end{enumerate}
 
-		\begin{enumerate}
-			\item $b_{n+1}(k) - a_{n+1}(k) = b_n(k) - a_n(k) = k$.
+    ...а точки действительно отмечены:
 
-			\item $b_{n+1}(k) - a_{n+1}(k) = \cdot 3^{n+1} - b_n(2 \cdot 3^n - k) - 3^n + a_n(2 \cdot 3^n - k) = 2 \cdot 3^n - (b_n(2 \cdot 3^n - k) - a_n(2 \cdot 3^n - k)) = 2 \cdot 3^n - (2 \cdot 3^n - k) = k$.
+    \begin{enumerate}
+        \item
+        \begin{align*}
+            &a_n(k) \in C_n \implies a_n(k) \in C_{n+1}; \\
+            &b_n(k) \in C_n \implies b_n(k) \in C_{n+1}.
+        \end{align*}
 
-			\item $b_{n+1}(k) - a_{n+1}(k) = 2 \cdot 3^n + b_n(k - 2 \cdot 3^n) - a_n(k - 2 \cdot 3^n) = 2 \cdot 3^n + (k - 2 \cdot 3^n) = k$.
-		\end{enumerate}
+        \item
+        \begin{align*}
+            &a_n(2 \cdot 3^n - k) \in C_n \implies 3^n - a_n(2 \cdot 3^n - k) \in C_n \implies 3^n - a_n(2 \cdot 3^n - k) \in C_{n+1}; \\
+            &b_n(2 \cdot 3^n - k) \in C_n \implies b_n(2 \cdot 3^n - k) \in C_{n+1} \implies 3^{n+1} - b_n(2 \cdot 3^n - k) \in C_{n+1}.
+        \end{align*}
 
-		...а точки действительно отмечены:
+        \item
+        \begin{align*}
+            &a_n(k - 2 \cdot 3^n) \in C_n \implies a_n(k - 2 \cdot 3^n) \in C_{n+1}; \\
+            &b_n(k - 2 \cdot 3^n) \in C_n \implies 3^n - b_n(k - 2 \cdot 3^n) \in C_n \implies 3^n - b_n(k - 2 \cdot 3^n) \in C_{n+1} \implies \\
+            &\implies 3^{n+1} - 3^n + b_n(k - 2 \cdot 3^n) \in C_{n+1} \implies 2 \cdot 3^n + b_n(k - 2 \cdot 3^n) \in C_{n+1}.
+        \end{align*}
+    \end{enumerate}
 
-		\begin{enumerate}
-			\item
-				\begin{align*}
-					&a_n(k) \in C_n \implies a_n(k) \in C_{n+1}; \\
-					&b_n(k) \in C_n \implies b_n(k) \in C_{n+1}.
-				\end{align*}
 
-			\item
-				\begin{align*}
-					&a_n(2 \cdot 3^n - k) \in C_n \implies 3^n - a_n(2 \cdot 3^n - k) \in C_n \implies 3^n - a_n(2 \cdot 3^n - k) \in C_{n+1}; \\
-					&b_n(2 \cdot 3^n - k) \in C_n \implies b_n(2 \cdot 3^n - k) \in C_{n+1} \implies 3^{n+1} - b_n(2 \cdot 3^n - k) \in C_{n+1}.
-				\end{align*}
+\begin{center}
+\textbf{Задача 4}
+\end{center}    Заметим, что кузнечик всегда может некоторой последовательностью действий переместиться ровно на 1 вправо.
 
-			\item
-				\begin{align*}
-					&a_n(k - 2 \cdot 3^n) \in C_n \implies a_n(k - 2 \cdot 3^n) \in C_{n+1}; \\
-					&b_n(k - 2 \cdot 3^n) \in C_n \implies 3^n - b_n(k - 2 \cdot 3^n) \in C_n \implies 3^n - b_n(k - 2 \cdot 3^n) \in C_{n+1} \implies \\
-					&\implies 3^{n+1} - 3^n + b_n(k - 2 \cdot 3^n) \in C_{n+1} \implies 2 \cdot 3^n + b_n(k - 2 \cdot 3^n) \in C_{n+1}.
-				\end{align*}
-		\end{enumerate}
-	\end{section}
+    В самом деле, предположим, что кузнечик уже сделал $k - 1$ прыжок и сейчас готовится делать $k$-й. Тогда пусть он сделает $m = 2^k$ прыжков влево, а потом один прыжок вправо. Изменение его позиции на числовой прямой равно
 
-	\begin{section}{Задача 4}
-		Заметим, что кузнечик всегда может некоторой последовательностью действий переместиться ровно на 1 вправо.
+    \begin{equation*}
+        \left( \sum_{i=0}^{m-1} -(2^{k+i} + 1) \right) + (2^{k+m} + 1) = -2^k (2^m - 1) - m + 2^{k+m} + 1 = 2^k - m + 1 = 1.
+    \end{equation*}
 
-		В самом деле, предположим, что кузнечик уже сделал $k - 1$ прыжок и сейчас готовится делать $k$-й. Тогда пусть он сделает $m = 2^k$ прыжков влево, а потом один прыжок вправо. Изменение его позиции на числовой прямой равно
+    Таким образом, кузнечику нужно постоянно прыгать на 1 вправо описанным методом, и так он посетит все целые точки положительной полуоси.
 
-		\begin{equation*}
-			\left( \sum_{i=0}^{m-1} -(2^{k+i} + 1) \right) + (2^{k+m} + 1) = -2^k (2^m - 1) - m + 2^{k+m} + 1 = 2^k - m + 1 = 1.
-		\end{equation*}
 
-		Таким образом, кузнечику нужно постоянно прыгать на 1 вправо описанным методом, и так он посетит все целые точки положительной полуоси.
-	\end{section}
+\begin{center}
+\textbf{Задача 5}
+\end{center}    Проведем индукцию по числу $n$ лампочек: для каждого $n$ будем показывать, что для любого числа $m$ кнопок утверждение верно.
 
-	\begin{section}{Задача 5}
-		Проведем индукцию по числу $n$ лампочек: для каждого $n$ будем показывать, что для любого числа $m$ кнопок утверждение верно.
+    База индукции: $n = 0$, тривиальный случай, все уже правильно.
 
-		База индукции: $n = 0$, тривиальный случай, все уже правильно.
+    Индукционный переход: пусть утверждение верно для $n$, докажем для $n + 1$.
 
-		Индукционный переход: пусть утверждение верно для $n$, докажем для $n + 1$.
+    Применяя свойство из условия для множества из одной лампочки $\{n + 1\}$, получаем, что всегда существует кнопка, связанная в том числе с этой лампой; пусть без ограничения общности она будет $m$-й.
 
-		Применяя свойство из условия для множества из одной лампочки $\{n + 1\}$, получаем, что всегда существует кнопка, связанная в том числе с этой лампой; пусть без ограничения общности она будет $m$-й.
+    Чтобы свести задачу к меньшей, построим новую систему, состоящую из первых $n$ лампочек и первых $m - 1$ кнопок, где связи между лампочками и кнопками формируются следующим образом. Если $A_i$ -- множество лампочек, связанных с $i$-й кнопкой в старой системе, то в новой системе:
 
-		Чтобы свести задачу к меньшей, построим новую систему, состоящую из первых $n$ лампочек и первых $m - 1$ кнопок, где связи между лампочками и кнопками формируются следующим образом. Если $A_i$ -- множество лампочек, связанных с $i$-й кнопкой в старой системе, то в новой системе:
+    \begin{equation*}
+        B_i = \begin{cases}
+                  A_i \oplus A_m & \text{если } n + 1 \in A_i, \\
+                  A_i & \text{иначе.}
+        \end{cases}
+    \end{equation*}
 
-		\begin{equation*}
-			B_i = \begin{cases}
-				A_i \oplus A_m & \text{если } n + 1 \in A_i, \\
-				A_i & \text{иначе.}
-			\end{cases}
-		\end{equation*}
+    Здесь $\oplus$ обозначает симметрическую разность множеств. Легко видеть, что $n + 1 \not\in B_i$, поэтому новая система определена корректно.
 
-		Здесь $\oplus$ обозначает симметрическую разность множеств. Легко видеть, что $n + 1 \not\in B_i$, поэтому новая система определена корректно.
+    В таком случае сведение выглядит следующим образом:
 
-		В таком случае сведение выглядит следующим образом:
+    \begin{enumerate}
+        \item Если $n + 1$-ю лампу надо погасить, нажмем $m$-ю кнопку.
 
-		\begin{enumerate}
-			\item Если $n + 1$-ю лампу надо погасить, нажмем $m$-ю кнопку.
+        \item Применим алгоритм для $n$ ламп и $m-1$ кнопок со связями, задаваемыми конечной последовательностью $B$, где нажатие $i$-й кнопки в новой системе соответствует либо нажатию ее же в старой системе, если $n + 1 \not\in A_i$, либо нажатию ее и затем $m$-й кнопки в противном случае.
+    \end{enumerate}
 
-			\item Применим алгоритм для $n$ ламп и $m-1$ кнопок со связями, задаваемыми конечной последовательностью $B$, где нажатие $i$-й кнопки в новой системе соответствует либо нажатию ее же в старой системе, если $n + 1 \not\in A_i$, либо нажатию ее и затем $m$-й кнопки в противном случае.
-		\end{enumerate}
+    Легко видеть, что это дает правильный ответ: первый шаг устанавливает $n + 1$-ю лампу в правильное состояние, а второй сбрасывает первые $n$ ламп, не задевая $n + 1$-ю.
 
-		Легко видеть, что это дает правильный ответ: первый шаг устанавливает $n + 1$-ю лампу в правильное состояние, а второй сбрасывает первые $n$ ламп, не задевая $n + 1$-ю.
+    Осталось показать, что это сведение корректно, то есть сохраняет существование кнопки, соединенной с нечетным числом лампочек из произвольного набора $K \ne \emptyset$.
 
-		Осталось показать, что это сведение корректно, то есть сохраняет существование кнопки, соединенной с нечетным числом лампочек из произвольного набора $K \ne \emptyset$.
+    В самом деле, рассмотрим два случая:
 
-		В самом деле, рассмотрим два случая:
+    \begin{enumerate}
+        \item Если $\abs{K \cap A_m} = 0 \pmod 2$, то решим сначала задачу поиска кнопки $i$, соединенной с нечетным числом элементов из $K$, в старой системе. Сразу отметим, что $i \ne m$, так как $\abs{K \cap A_i} = 1 \pmod 2$. Утверждается, что эта лампа обладает требуемым свойством и в новой системе. В самом деле, если $n + 1 \not\in A_i$, то она переключает в обоих системах один и тот же набор ламп. Если же $n + 1 \in A_i$, то в новой системе среди данных $K$ ламп ее нажатие переключает сначала переключает нечетное число из них, а затем четное число, поскольку $\abs{K \cap A_m} = 0 \pmod 2$. Даже если эти множества пересекаются, в итоге переключено оказывается нечетное число ламп, что и требовалось.
 
-		\begin{enumerate}
-			\item Если $\abs{K \cap A_m} = 0 \pmod 2$, то решим сначала задачу поиска кнопки $i$, соединенной с нечетным числом элементов из $K$, в старой системе. Сразу отметим, что $i \ne m$, так как $\abs{K \cap A_i} = 1 \pmod 2$. Утверждается, что эта лампа обладает требуемым свойством и в новой системе. В самом деле, если $n + 1 \not\in A_i$, то она переключает в обоих системах один и тот же набор ламп. Если же $n + 1 \in A_i$, то в новой системе среди данных $K$ ламп ее нажатие переключает сначала переключает нечетное число из них, а затем четное число, поскольку $\abs{K \cap A_m} = 0 \pmod 2$. Даже если эти множества пересекаются, в итоге переключено оказывается нечетное число ламп, что и требовалось.
+        \item Если $\abs{K \cap A_m} = 1 \pmod 2$, то исполним ту же самую идею, что и в первом пункте, но будем требовать нечетное пересечение не с $K$, а с $K \cup \{n + 1\}$. Опять же, $i \ne m$, так как $\abs{(K \cup \{n + 1\}) \cap A_i} = 1 \pmod 2 \implies \abs{K \cup A_i} = 0 \pmod 2$. Тогда если $n + 1 \not\in A_i$, то $(n + 1)$-я лампа не задействована вообще, и в обоих системах переключен один и тот же набор ламп. Если же $n + 1 \in A_i$, то нажатие $i$-й лампы в новой системе среди данных $K$ ламп сначала переключает четное число (поскольку мы учитываем $n + 1$-ю лампу в старой системе, но не в новой), а затем нечетное число (поскольку $\abs{K \cap A_m} = 1 \pmod 2$) ламп -- итого нечетное количество.
+    \end{enumerate}
 
-			\item Если $\abs{K \cap A_m} = 1 \pmod 2$, то исполним ту же самую идею, что и в первом пункте, но будем требовать нечетное пересечение не с $K$, а с $K \cup \{n + 1\}$. Опять же, $i \ne m$, так как $\abs{(K \cup \{n + 1\}) \cap A_i} = 1 \pmod 2 \implies \abs{K \cup A_i} = 0 \pmod 2$. Тогда если $n + 1 \not\in A_i$, то $(n + 1)$-я лампа не задействована вообще, и в обоих системах переключен один и тот же набор ламп. Если же $n + 1 \in A_i$, то нажатие $i$-й лампы в новой системе среди данных $K$ ламп сначала переключает четное число (поскольку мы учитываем $n + 1$-ю лампу в старой системе, но не в новой), а затем нечетное число (поскольку $\abs{K \cap A_m} = 1 \pmod 2$) ламп -- итого нечетное количество.
-		\end{enumerate}
+    Индукционный переход доказан.
 
-		Индукционный переход доказан.
-	\end{section}
 
-	\begin{section}{Задача 6}
-		Будем доказывать, что при фиксированных $a_1, a_2, \dots, a_n$ для любого $1 \le m \le n$ числа $a_m, a_{m+1}, \dots, a_n$ можно разбить на две группы, суммы которых отличаются не больше, чем на $m$.
+\begin{center}
+\textbf{Задача 6}
+\end{center}    Будем доказывать, что при фиксированных $a_1, a_2, \dots, a_n$ для любого $1 \le m \le n$ числа $a_m, a_{m+1}, \dots, a_n$ можно разбить на две группы, суммы которых отличаются не больше, чем на $m$.
 
-		База индукции: при $m = n$ достаточно взять группы $[a_m]$ и $[]$ (то есть группу из одного элемента $a_m$ и пустую группу); суммы различаются на $a_m \le m$.
+    База индукции: при $m = n$ достаточно взять группы $[a_m]$ и $[]$ (то есть группу из одного элемента $a_m$ и пустую группу); суммы различаются на $a_m \le m$.
 
-		Индукционный переход: пусть утверждение верно для $m + 1$, докажем его для $m$. Рассмотрим какое-нибудь разбиение $a_{m+1}, \dots, a_n$ на группы с суммами $s_1$ и $s_2$, где $\abs{s_1 - s_2} \le m + 1$. Тогда добавим элемент $a_m$ в группу с меньшей суммой. Без ограничения общности считаем, что $s_1 \ge s_2$, тогда для $\Delta = s_1 - (s_2 + a_m)$ выполняется:
+    Индукционный переход: пусть утверждение верно для $m + 1$, докажем его для $m$. Рассмотрим какое-нибудь разбиение $a_{m+1}, \dots, a_n$ на группы с суммами $s_1$ и $s_2$, где $\abs{s_1 - s_2} \le m + 1$. Тогда добавим элемент $a_m$ в группу с меньшей суммой. Без ограничения общности считаем, что $s_1 \ge s_2$, тогда для $\Delta = s_1 - (s_2 + a_m)$ выполняется:
 
-		\begin{align*}
-			& \Delta = (s_1 - s_2) - a_m \le (m + 1) - a_m \le (m + 1) - 1 = m, \\
-			& \Delta \ge 0 - a_m \ge -m.
-		\end{align*}
+    \begin{align*}
+        & \Delta = (s_1 - s_2) - a_m \le (m + 1) - a_m \le (m + 1) - 1 = m, \\
+        & \Delta \ge 0 - a_m \ge -m.
+    \end{align*}
 
-		$\abs{\Delta} \le m$ -- новая разность сумм групп, она удовлетворяет требуемым условиям, индукционный переход завершен.
+    $\abs{\Delta} \le m$ -- новая разность сумм групп, она удовлетворяет требуемым условиям, индукционный переход завершен.
 
-		Для получения требуемого в задаче результата подставим $m = 1$, что дает разбиение на две группы с суммами, отличающимися не более, чем на 1, а поскольку сумма $a_1 + a_2 + \dots + a_n$ четна, суммы групп должны быть одной четности и отличаться на 1 не могут.
-	\end{section}
+    Для получения требуемого в задаче результата подставим $m = 1$, что дает разбиение на две группы с суммами, отличающимися не более, чем на 1, а поскольку сумма $a_1 + a_2 + \dots + a_n$ четна, суммы групп должны быть одной четности и отличаться на 1 не могут.
 
-	\begin{section}{Задача 7}
-		Будем доказывать требуемое по индукции по $n$.
 
-		База, $n = 0$, тривиальна.
+\begin{center}
+\textbf{Задача 7}
+\end{center}    Будем доказывать требуемое по индукции по $n$.
 
-		Пусть утверждение верно для всех количеств черных клеток, меньших $n$, покажем его истинность для $n$.
+    База, $n = 0$, тривиальна.
 
-		Рассмотрим самый левый столбец, содержащий хотя бы одну черную клетку. Справа от него находится $k < n$ черных клеток. Легко видеть, что поведение части плоскости правее этого столбца никак не зависит от состояния этого столбца; значит, можно применить предположение индукции, из которого следует, что после $k$ шагов (а тем более $n - 1$ шаг) правая часть плоскости будет полностью состоять из белых клеток. Также очевидно, что слева от этого столбца ни одна черная клетка появиться не может. Итак, спустя $n - 1$ шаг содержать черные клетки может только один столбец.
+    Пусть утверждение верно для всех количеств черных клеток, меньших $n$, покажем его истинность для $n$.
 
-		Проделав аналогичные рассуждения с самой нижней строкой, можно сделать вывод о том, что спустя $n - 1$ шаг черные клетки может содержать только одна строка.
+    Рассмотрим самый левый столбец, содержащий хотя бы одну черную клетку. Справа от него находится $k < n$ черных клеток. Легко видеть, что поведение части плоскости правее этого столбца никак не зависит от состояния этого столбца; значит, можно применить предположение индукции, из которого следует, что после $k$ шагов (а тем более $n - 1$ шаг) правая часть плоскости будет полностью состоять из белых клеток. Также очевидно, что слева от этого столбца ни одна черная клетка появиться не может. Итак, спустя $n - 1$ шаг содержать черные клетки может только один столбец.
 
-		Из этого следует, что через $n - 1$ шаг черной может быть только одна клетка, расположенная на пересечении этих столбца и строки. За $n$-й шаг эта клетка превратится в белую, если она не была таковой до этого, а значит, белым окажется все поле. \qed
-	\end{section}
-\end{document}
+    Проделав аналогичные рассуждения с самой нижней строкой, можно сделать вывод о том, что спустя $n - 1$ шаг черные клетки может содержать только одна строка.
+
+    Из этого следует, что через $n - 1$ шаг черной может быть только одна клетка, расположенная на пересечении этих столбца и строки. За $n$-й шаг эта клетка превратится в белую, если она не была таковой до этого, а значит, белым окажется все поле. \qed
