--- a/homeworks/hw-week-6.tex
+++ b/homeworks/hw-week-6.tex
@@ -1,64 +1,9 @@
-% !TEX options=--shell-escape
-\documentclass{article}
-\usepackage{tikz,amsthm,amsmath,cancel,pgfplots,animate,multirow,unicode-math,adjustbox,booktabs,array,pst-solides3d,pst-all,pst-3dplot,color,colortbl}
-\usepackage[margin=96pt]{geometry}
+\subsection{Домашнее задание 6}
 
-\usetikzlibrary{automata,positioning,calc,decorations.pathmorphing,patterns,external}
-\tikzexternalize[prefix=external/]
 
-\newtheorem{problem}{Задача}
-\newtheorem{lemma}{Лемма}
-\newtheorem{theorem}{Теорема}
-\newtheorem{definition}{Определение}
-\newtheorem{example}{Пример}
-\renewcommand*{\proofname}{Доказательство}
-\newcommand{\const}{\mathrm{const}}
-\DeclareMathOperator{\ord}{ord}
-\DeclareMathOperator{\maj}{MAJ}
-\newcommand{\abs}[1]{\left\lvert#1\right\rvert}
-\newcommand{\floor}[1]{\left\lfloor#1\right\rfloor}
-\newcommand{\ceil}[1]{\left\lceil#1\right\rceil}
-\newcommand{\fr}[1]{\left\{#1\right\}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\Q}{\mathbb{Q}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\C}{\mathbb{C}}
-
-\newcolumntype{o}{>{\columncolor{orange}}c}
-
-\makeatletter
-\newenvironment{sqcases}{%
-	\matrix@check\sqcases\env@sqcases
-}{%
-	\endarray\right.%
-}
-\def\env@sqcases{%
-	\let\@ifnextchar\new@ifnextchar
-	\left\lbrack
-	\def\arraystretch{1.2}%
-	\array{@{}l@{\quad}l@{}}%
-}
-\makeatother
-
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{5pt}
-\setmainfont{CMU Serif}
-\widowpenalties 1 10000
-\raggedbottom
-
-\date{18 октября, 2022}
-\title{Дискретная математика \\ \Large Домашнее задание 6}
-\author{Иван Мачуговский}
-
-\AtBeginDocument{
-	\renewcommand{\setminus}{\mathbin{\backslash}}
-}
-
-\begin{document}
-	\maketitle
-
-	\begin{section}{Задача 1}
+	\begin{center}
+    \textbf{Задача 1}
+\end{center}
 		Воспользуемся формулой включений-исключений. Обозначим за $A_i$ множество строк, содержащих подстроку $1110$, начиная с $i$-й позиции ($0 \le i \le 12$).
 
 		Строк, содержащих подстроку $1110$ на данной $i$-й позиции -- $2^{12}$, поэтому суммарная мощность множеств по всем $i$ -- $2^{12} \cdot 13$.
@@ -82,9 +27,11 @@
 		\begin{equation*}
 			2^{12} \cdot 13 - 2^8 \cdot 45 + 2^4 \cdot 35 - 1 = 42287.
 		\end{equation*}
-	\end{section}
 
-	\begin{section}{Задача 2}
+
+	\begin{center}
+    \textbf{Задача 2}
+\end{center}
 		а) Построим биекцию между $A \setminus B$ и $A = (A \setminus B) \sqcup B$.
 
 		$A \setminus B$ бесконечно, поэтому в нем можно выбрать некоторую счетную последовательность $a_1, a_2, \dots, a_n, \dots$. Обозначим множество ее значений $K$. $B$ само также счетно, поэтому занумеруем его элементы $b_1, b_2, \dots, b_n, \dots$.
@@ -100,9 +47,11 @@
 		Легко видеть, что это биекция: функция, суженная на первую строку этого определения, инъективна и имеет образ $K$, на вторую -- инъективна и имеет образ $B$, на третью -- инъективна и имеет образ $A \setminus B \setminus K$, а эти множества не пересекаются и в объединении дают все $A$.
 
 		б) Нет, неверно: если $A = B = \N$, то $A \triangle B = \emptyset$, что неравномощно $\N$.
-	\end{section}
 
-	\begin{section}{Задача 3}
+
+	\begin{center}
+    \textbf{Задача 3}
+\end{center}
 		Многочленов с целыми коэффициентами степени $n$ -- $\mathbb{Z}^{n+1} \sim \mathbb{N}^{n+1} \sim \mathbb{N}$. У каждого из этих многочленов не более $n$ корней, поэтому всего корней таких многочленов не более $n \times \mathbb{N} \sim \mathbb{N}$.
 
 		Соответственно, корней суммарно по всем степеням многочленов -- счетное объединение не более чем счетных множеств, то есть не более $\mathbb{N} \times \mathbb{N} \sim \mathbb{N}$.
@@ -110,9 +59,11 @@
 		С другой стороны, алгебраических чисел как минимум счетно, потому что каждое целое число является алгебраическим.
 
 		Следовательно, алгебраических чисел счетно.
-	\end{section}
 
-	\begin{section}{Задача 4}
+
+	\begin{center}
+    \textbf{Задача 4}
+\end{center}
 		Из бесконечного множества $A$ выпишем счетную последовательность $a_1, a_2, \dots, a_n, \dots$.
 
 		Разделим все элементы этой последовательность на группы согласно степени вхождения простого $2$ в их номер. Тогда в $k$-ю группу ($k \ge 0, k \in \Z$) попадают элементы
@@ -122,13 +73,17 @@
 		\end{equation*}
 
 		коих счетно, и всего групп счетно, что и требовалось.
-	\end{section}
 
-	\begin{section}{Задача 5}
+
+	\begin{center}
+    \textbf{Задача 5}
+\end{center}
 		В каждом отрезке можно выбрать рациональную точку. Отрезки не пересекаются, поэтому все выбранные рациональные точки будут различны. Всего рациональных чисел счетно, поэтому выбранных точек, а следовательно, и отрезков, не более, чем счетно.
-	\end{section}
 
-	\begin{section}{Задача 6}
+
+	\begin{center}
+    \textbf{Задача 6}
+\end{center}
 		Будем строить биекции итеративно: сначала установим им значения в точке $0$, затем $1, -1, 2, -2, 3, -3$, и так далее.
 
 		Пусть к текущему моменту уже построены некоторые функции $g_1, g_2, g_3$, определенные на конечном числе точек, и мы хотим присвоить им некоторое значение в очередной точке $x$.
@@ -140,9 +95,11 @@
 		Во-первых, эти отображения будут инъекциями, поскольку каждый раз мы присваиваем $g_1, g_2, g_3$ значения, отсутствовавшие до этого в их образах.
 
 		Во-вторых, они будут сюръективны, поскольку мы на каждом шаге выбираем ближайшее к нулю не использованное число. Более формально, $g_1, g_2, g_3$ гарантированно принимают значение $0$ за первые три итерации, $1$ -- за следующие три итерации, $-1$ -- за следующие три и так далее; в общем случае каждая из трех функций гарантированное принимает $k$-е значение из последовательности $0, 1, -1, 2, -2, \dots$ после $3k$ итераций.
-	\end{section}
 
-	\begin{section}{Задача 7}
+
+	\begin{center}
+    \textbf{Задача 7}
+\end{center}
 		Нет, не обязательно. Приведем контрпример.
 
 		Будем строить возрастающую последовательность $a_1, a_2, \dots, a_n, \dots$, множество значений которой будет $A$.
@@ -178,5 +135,5 @@
 		Каждая бесконечная арифметическая прогрессия задается двумя натуральными числами -- первым элементом и шагом, поэтому всего таких прогрессий $\N^2 \sim \N$. Занумеруем их $I_1, I_2, \dots, I_n, \dots$. Последовательность $\{a_n\}$ строим итеративно: первым элементом выбираем что угодно из $I_1$, а далее на $n$-м шаге в качестве $a_n$ выбирается произвольный элемент $I_n$, не меньший $2 a_{n-1}$ (такой найдется, так как $I_n$ неограничена).
 
 		Тогда по построению $\frac{a_{n+1}}{a_n} \ge 2$ и $A$ пересекается с каждой прогрессией, чего мы и добивались.
-	\end{section}
-\end{document}
+
+
