--- a/proofs/proof4.tex
+++ b/proofs/proof4.tex
@@ -1,6 +1,6 @@
 \subsection{Теорема о классах эквивалентности для отношения эквивалентности.}
 
-\textbf{Теорема.} Если $R$ -- отношение эквивалентности на $A$, то $A = \bigcup_{i \in I}A_i$, $A_i \cap A_j = \varnothing (\forall i \neq j)$, таких что $\forall a, b \in A_i : aRb$, $\forall a \in A_i, b \in A_j, i \neq j : \neg (aRb)$.
+\textbf{Теорема.} Если $R$ -- отношение эквивалентности на $A$, то существует разбиение множества $A$ отношением эквивалентности $R$ на непересекающиеся классы $(\forall i \neq j \colon A_i \cap A_j = \varnothing,\; \cup_{i \in I} A_i = A)$ такое, что $\forall x, y \in A_i \colon xRy$ и $\forall x \in A_i, y \in A_j, i \neq j: \neg xRy$. (то есть если два элемента принадлежат одному классу эквивалентности, они находятся в отношении $R$ и наоборот).
 
 \textbf{Доказательство:}
 
