--- a/proofs/proof8.tex
+++ b/proofs/proof8.tex
@@ -1,4 +1,4 @@
-\subsection{Формулы, полные системы связок. Полнота системы связок «конъюнкция, дизъюнкция, отрицание». Дизъюкктивная нормальная форма, СДНФ.}
+\subsection{Формулы, полные системы связок. Полнота системы связок «конъюнкция, дизъюнкция, отрицание». Дизъюнктивная нормальная форма, СДНФ.}
 \textbf{Теорема 4.6}: $\{\neg, \wedge, \vee\}$ -- полная система связок\\
 
 \noindent \textbf{Доказательство}:\\
